style fixes optimisation and todos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,14 +79,13 @@
 
         <div class="chat-input-area">
           <div class="input-group">
-            <input 
-              type="text" 
-              class="form-control" 
-              id="chatInput" 
+            <textarea
+              class="form-control"
+              id="chatInput"
               placeholder="Describe your website..."
-              disabled
-            />
-            <button class="btn" id="sendBtn" type="button" disabled>
+              rows="1"
+            ></textarea>
+            <button class="btn" id="sendBtn" type="button">
               <i class="bi bi-send-fill"></i>
             </button>
           </div>
